# TestVlastnichLibraries

./: .gitignore  BuildLinux.sh  BuildWindows.ps1  CMakeLists.txt  README.md  main.cpp
Model/User/: User.cpp  User.h
linux_libs/plaja_logger/: PlajaLogger.h
windows_libs/plaja_logger/: PlajaLogger.h  plaja_logger.lib
